--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <!--===== HOME =====-->
             <section class="home bd-grid" id="home">
                 <div class="home__data">
-                    <h1 class="home__title">Hi,<br>I'am 👋<span class="home__title-color">Harizaldo</span><br>CEO Pixxiee Internet</h1>
+                    <h1 class="home__title">Hi, 👋<br>I'am <span class="home__title-color">Harizaldo</span><br>CEO Pixxiee Internet</h1>
 
                     <a href="mailto:harizaldo230@gmail.com" class="button">Contact</a>
                 </div>
